[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-cli"
version = "0.1.0"
description = "CLI utility to extract summary information from PDB files."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "biopython>=1.80",
    "requests>=2.0.0"
]

[project.scripts]
pdb-cli = "pdb_cli.cli:main" 