[metadata]
name = pdb-cli
version = 0.1.0
description = CLI utility to extract summary information from PDB files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich>=13.0.0
    biopython>=1.80

[options.entry_points]
scripts =
    pdb-cli = pdb_cli.cli:main 